added random colors for inputs and carets

--- a/index.html
+++ b/index.html
@@ -13,36 +13,7 @@
 </head>
 <body>
     <div>
-        <h1>
-            <!-- <span class="red">T</span>
-            <span class="red">o</span>
-            <span class="red">d</span>
-            <span class="yellow">a</span>
-            <span class="red">y </span>
-            <span class="green"> </span>
-            <span class="red">i</span>
-            <span class="blue">n </span>
-            <span class="green">G</span>
-            <span class="blue">o</span>
-            <span class="yellow">o</span>
-            <span class="red">g</span>
-            <span class="yellow">l</span>
-            <span class="blue">e </span>            
-            <span class="blue">d</span>
-            <span class="blue">o</span>
-            <span class="red">o</span>
-            <span class="blue">d</span>
-            <span class="blue">l</span>
-            <span class="blue">e</span>
-            <span class="red">s </span>
-            <span class="green">h</span>
-            <span class="red">i</span>
-            <span class="yellow">s</span>
-            <span class="green">t</span>
-            <span class="red">o</span>
-            <span class="yellow">r</span>
-            <span class="green">y</span> -->
-        </h1>
+        <h1></h1>
     </div>
     <div class="dateSection">
         <div class="defaultDate">
@@ -58,21 +29,17 @@
         </div>
 
     <div id="changeDate" class="hide">
-        <input type="text" id="newDateInput" name="newDate" class="redBackground">
-        <button id="getDoodles" class="btn btn-warning" class="blueBackground">Get doodles</button>
+        <input type="text" id="newDateInput" name="newDate">
+        <button id="getDoodles" class="btn btn-warning">Get doodles</button>
     </div>
 
     <div id="errorMessage" class="alert alert-danger alert-dismissible error hide">
-        <!-- <a class="close" data-dismiss="alert" aria-lable="close" href="#">x</a> -->
         <strong>Error! </strong>
         "The date has to be in MM/DD/YYYY format. Try a different date."
     </div>
     </div>
     <div class="doodleBody">
         <div class="container">
-            <!-- <div class="row">
-
-            </div> -->
         </div>
     </div>
 
